// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A <h1> Heading 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  margin: 0;
  font-size: 1.5625rem;
  line-height: 2.5rem;
  font-weight: 400;
  text-transform: none;
  text-align: left;
}

<h1
  className="c0"
>
  🥑
</h1>
`;

exports[`A <h1> Heading sized to <h2> 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  margin: 0;
  font-size: 1.375rem;
  line-height: 2rem;
  font-weight: 400;
  text-transform: none;
  text-align: left;
}

<h1
  className="c0"
>
  🥑
</h1>
`;

exports[`A Heading to semi-bold 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  margin: 0;
  font-size: 1.125rem;
  line-height: 1.75rem;
  font-weight: 700;
  text-transform: none;
  text-align: left;
}

<h3
  className="c0"
>
  🥑
</h3>
`;

exports[`A Heading transformed 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  margin: 0;
  font-size: 1.125rem;
  line-height: 1.75rem;
  font-weight: 400;
  text-transform: capitalize;
  text-align: left;
}

<h3
  className="c0"
>
  🥑
</h3>
`;

exports[`A default Heading 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  margin: 0;
  font-size: 1.125rem;
  line-height: 1.75rem;
  font-weight: 400;
  text-transform: none;
  text-align: left;
}

<h3
  className="c0"
>
  🥑
</h3>
`;
